# rainyday

./: BUGLIST.txt  BUILDCHAIN.conf  CMakeLists.txt  config_handler.cpp  config_handler.h  configure.sh  copy_playlist_backend.cpp  copy_playlist_backend.h  doc_copy_playlist  mainwindow.cpp  mainwindow.h  mainwindow.ui  playlist.kdev4  playlist_ressource.qrc  rainyday.desktop  rainyday_ubuntu.desktop  ui_mainwindow.h
debian_ubuntu/: changelog  control  copyright  docs
include/: ui_mainwindow.h
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
